--- a/package.json
+++ b/package.json
@@ -15,13 +15,13 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
-    "puppeteer": "^16.2.0"
+    "puppeteer": "^16.2.0",
+    "typescript": "^4.7.4"
   },
   "devDependencies": {
     "@types/express": "^4.17.13",
     "@types/node": "^18.7.8",
     "concurrently": "^7.3.0",
-    "nodemon": "^2.0.19",
-    "typescript": "^4.7.4"
+    "nodemon": "^2.0.19"
   }
 }
