--- a/package.json
+++ b/package.json
@@ -15,6 +15,7 @@
   "dependencies": {
     "dotenv": "^16.0.1",
     "express": "^4.18.1",
+    "heroku": "^7.62.0",
     "puppeteer": "^16.2.0",
     "typescript": "^4.7.4"
   },
