--- a/package.json
+++ b/package.json
@@ -20,6 +20,7 @@
     "firebase-admin": "^11.0.1",
     "heroku": "^7.62.0",
     "puppeteer": "^16.2.0",
+    "tesseract.js": "^5.0.5",
     "typescript": "^4.7.4"
   },
   "devDependencies": {
